feat: sdk-3.8.1以降のnetworkedに対応

--- a/Packages/com.hoshinolabs.sardinject/Editor/Udon/HoshinoLabs.Sardinject.Udon.Editor.asmdef
+++ b/Packages/com.hoshinolabs.sardinject/Editor/Udon/HoshinoLabs.Sardinject.Udon.Editor.asmdef
@@ -20,6 +20,12 @@
     "defineConstraints": [
         "UDONSHARP"
     ],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.vrchat.worlds",
+            "expression": "3.8.1-1",
+            "define": "VRC_SDK_WORLDS3_8_1_OR_NEWER"
+        }
+    ],
     "noEngineReferences": false
 }
