Add Unity cache, VPM resolve, and test steps to CI
Enhanced the release workflow by adding steps to restore the Unity Library cache, resolve VPM packages, and run Unity tests with coverage reporting. These changes improve build efficiency and ensure automated testing of the Unity project.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,31 @@ jobs:
       - name: Checkout
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
 
+      # Restore Library Cache
+      - name: Restore Library Cache
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684
+        with:
+          path: Library
+          key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
+          restore-keys: |
+            Library-
+
+      # Resolve VPM Packages
+      - uses: anatawa12/sh-actions/resolve-vpm-packages@1d155c7a26bcd0a54ffd9cb38fd66ab0d32d23cd
+        name: Resolve VPM Packages
+
+      # Test the Unity Project using the Unity Test Runner Action
+      - name: Test Unity Project
+        uses: game-ci/unity-test-runner@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        with:
+          # projectPath: path/to/your/project
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          coverageOptions: "generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+HoshinoLabs.Sardinject.*"
+
       # Get the Package version based on the package.json file
       - name: Get Version
         id: version
