Add editmode testMode to release workflow
Configured the GitHub Actions release workflow to run tests in editmode by setting the testMode parameter. This ensures that editmode tests are executed during the release process.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           # projectPath: path/to/your/project
+          testMode: editmode
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           coverageOptions: "generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+HoshinoLabs.Sardinject.*"
 
