Update coverageOptions filter in release workflow
Modified the coverageOptions in the release workflow to explicitly exclude all assemblies by default and include only HoshinoLabs.Sardinject.*. This change ensures that coverage reports are generated only for the intended assemblies.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
           # projectPath: path/to/your/project
           testMode: editmode
           githubToken: ${{ secrets.GITHUB_TOKEN }}
-          coverageOptions: "generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+HoshinoLabs.Sardinject.*"
+          coverageOptions: "generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:-<all>,+HoshinoLabs.Sardinject.*"
 
       # Get the Package version based on the package.json file
       - name: Get Version
